--- a/src/styles/church_global-styles.scss
+++ b/src/styles/church_global-styles.scss
@@ -121,7 +121,7 @@ h6 {
 
 p {
 	font-size: 1.6rem;
-	line-height: 1.6;
+	line-height: 1.4;
 	font-family: 'Brown Light', sans-serif;
 
 	a {
@@ -133,7 +133,12 @@ p {
 			text-decoration: underline;
 		}
 	}
+}
 
+@media only screen and (max-width: 480px) {
+	p {
+		line-height: 1.3;
+	}
 }
 
 .txt-gold {
@@ -381,7 +386,7 @@ hr.em-dash {
 ul {
 	list-style: none;
 	padding: 0;
-	margin: 0 -.6rem;
+	margin: 0;
 	li {
 		list-style-position: inside;
 	}
